Fixed overflow for progress bars

--- a/src/main/resources/static/less/devhub.less
+++ b/src/main/resources/static/less/devhub.less
@@ -708,3 +708,7 @@ code {
     right: 5px;
     top: 10px;
 }
+
+.progress-bar {
+  overflow: hidden;
+}
